# tvg-smallworld

./: .gitignore  .travis.yml  Jenkinsfile  LICENSE  README.md  stack.yaml  tvg-smallworld.cabal
data/: origin_success.txt  square_success.txt  uniform_success.txt
doc/: Report.tex  proposal.tex  proposal2.tex  tvg-smallworld.bib
experiments/: levy-0.2_0.1.conf  levy-0.2_0.2.conf  levy-0.2_0.3.conf  levy-0.2_0.35.conf  levy-0.2_0.5.conf  levy-0.2_0.55.conf  levy-0.2_0.65.conf  levy-0.2_0.8.conf  levy-0.4_0.2.conf  levy-0.4_0.35.conf  levy-0.4_0.4.conf  levy-0.4_0.45.conf  levy-0.4_0.5.conf  levy-0.4_0.6.conf  levy-0.4_0.8.conf  levy-0.6_0.1.conf  levy-0.6_0.2.conf  levy-0.6_0.3.conf  levy-0.6_0.4.conf  levy-0.6_0.6.conf  levy-0.6_0.65.conf  levy-0.6_0.7.conf  levy-0.6_0.8.conf  levy-0.6_0.9.conf  levy-0.8_0.4.conf  levy-0.8_0.6.conf  levy-0.8_0.9.conf  levy-1.0_0.2.conf  levy-1.0_0.35.conf  levy-1.0_0.4.conf  levy-1.0_0.45.conf  levy-1.0_0.55.conf  levy-1.0_0.7.conf  levy-1.0_0.9.conf  levy-1.2_0.1.conf  levy-1.2_0.3.conf  levy-1.2_0.35.conf  levy-1.2_0.4.conf  levy-1.2_0.45.conf  levy-1.2_0.5.conf  (+20 more)
experiments/ballistic/: ballistic-origin-0.10.conf  ballistic-origin-0.15.conf  ballistic-origin-0.20.conf  ballistic-origin-0.25.conf  ballistic-origin-0.30.conf  ballistic-origin-0.35.conf  ballistic-origin-0.40.conf  ballistic-origin-0.45.conf  ballistic-origin-0.50.conf  ballistic-origin-0.55.conf  ballistic-origin-0.60.conf  ballistic-origin-0.65.conf  ballistic-origin-0.70.conf  ballistic-origin-0.75.conf  ballistic-origin-0.80.conf  ballistic-origin-0.85.conf  ballistic-origin-0.90.conf  ballistic-square-0.10.conf  ballistic-square-0.15.conf  ballistic-square-0.20.conf  ballistic-square-0.25.conf  ballistic-square-0.30.conf  ballistic-square-0.35.conf  ballistic-square-0.40.conf  ballistic-square-0.45.conf  ballistic-square-0.50.conf  ballistic-square-0.55.conf  ballistic-square-0.60.conf  ballistic-square-0.65.conf  ballistic-square-0.70.conf  ballistic-square-0.75.conf  ballistic-square-0.80.conf  ballistic-square-0.85.conf  ballistic-square-0.90.conf  ballistic-uniform-0.10.conf  ballistic-uniform-0.15.conf  ballistic-uniform-0.20.conf  ballistic-uniform-0.25.conf  ballistic-uniform-0.30.conf  ballistic-uniform-0.35.conf  (+11 more)
experiments/comm-radius/: run-cr-experiments.sh
experiments/levy/: levy-0.2_0.15.conf  levy-0.2_0.20.conf  levy-0.2_0.25.conf  levy-0.2_0.30.conf  levy-0.2_0.4.conf  levy-0.2_0.40.conf  (+186 more)
experiments/levy-127/: levy-0.2_0.00.conf  levy-0.2_0.01.conf  levy-0.2_0.02.conf  levy-0.2_0.03.conf  levy-0.2_0.04.conf  levy-0.2_0.05.conf  levy-0.2_0.06.conf  levy-0.2_0.07.conf  levy-0.2_0.08.conf  levy-0.2_0.09.conf  levy-0.2_0.10.conf  levy-0.2_0.11.conf  levy-0.2_0.12.conf  levy-0.2_0.13.conf  levy-0.2_0.14.conf  levy-0.2_0.15.conf  levy-0.2_0.16.conf  levy-0.2_0.17.conf  levy-0.2_0.18.conf  levy-0.2_0.19.conf  levy-0.2_0.20.conf  levy-0.2_0.21.conf  levy-0.2_0.22.conf  levy-0.2_0.23.conf  levy-0.2_0.24.conf  levy-0.2_0.25.conf  levy-0.2_0.26.conf  levy-0.2_0.27.conf  levy-0.2_0.28.conf  levy-0.2_0.29.conf  levy-0.2_0.30.conf  levy-0.2_0.31.conf  levy-0.2_0.32.conf  levy-0.2_0.33.conf  levy-0.2_0.34.conf  levy-0.2_0.35.conf  levy-0.2_0.36.conf  levy-0.2_0.37.conf  levy-0.2_0.38.conf  levy-0.2_0.39.conf  (+465 more)
src/: Config.hs  EvalCA.hs  InteractionNetwork.hs  Main.hs  Model.hs  Visualization.hs
(+1065 files in other folders)
