name:                tvg-smallworld
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wfvining/tvg-smallworld#readme
license:             BSD3
license-file:        LICENSE
author:              Will Vining
maintainer:          wfvining@gmail.com
copyright:           2018 Will Vining
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tvg-smallworld
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
