name:                tvg-smallworld
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wfvining/tvg-smallworld#readme
license:             BSD3
license-file:        LICENSE
author:              Will Vining
maintainer:          wfvining@gmail.com
copyright:           2018 Will Vining
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tvg-smallworld
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Model
                     , InteractionNetwork
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , hmatrix >= 0.16
                     , containers
                     , normaldistribution >= 1.1

executable tvg-viz
  hs-source-dirs:      src
  main-is:             Visualization.hs
  other-modules:       Model
                     , InteractionNetwork
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , hmatrix >= 0.16
                     , containers
                     , normaldistribution >= 1.1
                     , gloss
                       
